# aws-lambda-templates

./: .coveragerc  .env.local.example  .gitignore  404.html  AGENTS.md  Makefile  benchmark_validation_error.py  cdk.json  compose.yml  index.html  mise.toml  mkdocs.yml  new.py  objects.inv  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-docs.txt  requirements-infra.txt  requirements.txt  ruff.toml
.Jules/: palette.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: check.yml  deploy.yml  docs.yml  verify.yml
.jules/: bolt.md  palette.md  sentinel.md
.kiro/specs/cdk-deploy-destroy-targets/: requirements.md  tasks.md
.kiro/specs/code-style-refactor/: design.md  requirements.md  tasks.md
.kiro/specs/documentation-update/: .config.kiro
.kiro/specs/eventbridge-api-caller/: design.md  requirements.md  tasks.md
.kiro/specs/github-deploy-workflow/: .config.kiro  design.md  tasks.md
.kiro/specs/lambda-scenario-templates/: design.md  tasks.md
.kiro/specs/s3-sqs-lambda-template/: design.md  requirements.md  tasks.md
.template/code/: handler.pyt  models.pyt  settings.pyt
.template/docs/: reference.md  template.md
.template/stacks/: template.pyt
.template/tests/: test_handler.pyt
.vibe/specs/cdk-deploy-destroy-targets/: design.md
.vibe/specs/code-style-refactor/: requirements.md
.vibe/specs/deploy-localstack/: design.md  plan.md  requirements.md  tasks.md  walkthrough.md
.vibe/specs/documentation-update/: design.md  requirements.md  tasks.md
CONTRIBUTING/: index.html
LICENSE/: index.html
docs/: CONTRIBUTING.md  LICENSE.md  README.md  templates.md
docs/reference/: agent.md  api.md  app.md  bedrock_agent.md  eventbridge.md  graphql.md  models.md  queue.md  repository.md  s3.md  settings.md  sqs.md  stream.md
docs/template/: agent.md  api.md  bedrock_agent.md  eventbridge.md  graphql.md  index.md  s3.md  sqs.md  stream.md
infra/: app.py  code.py
infra/stacks/: agent.py  api.py  api_gateway_dynamodb_stack.py  bedrock_agent.py  dynamodb_stream_stack.py  eventbridge.py  graphql.py  s3.py  sqs.py  stream.py
reference/agent/: index.html
reference/api/: index.html
reference/eventbridge/: index.html
reference/graphql/: index.html
reference/models/: index.html
reference/queue/: index.html
reference/repository/: index.html
reference/s3/: index.html
reference/settings/: index.html
reference/sqs/: index.html
reference/stream/: index.html
scripts/: new.py  new_template.py  rename.py
search/: search_index.json
template/agent/: index.html
template/api/: index.html
template/eventbridge/: index.html
template/graphql/: index.html
template/s3/: index.html
template/sqs/: index.html
template/stream/: index.html
templates/: models.py  queue.py  repository.py  session.py  settings.py
templates/agent/: handler.py  models.py  settings.py
templates/api/: handler.py  models.py  response.py  settings.py
templates/bedrock_agent/: handler.py  models.py
templates/eventbridge/: __init__.py  handler.py  models.py  secrets.py  session.py  settings.py
templates/graphql/: handler.py  models.py  schema.graphql  settings.py
templates/s3/: handler.py  models.py  queue.py  settings.py
templates/sqs/: handler.py  models.py  settings.py
templates/stream/: handler.py  models.py  settings.py
tests/: conftest.py  test_repository.py
tests/agent/: conftest.py  test_handler.py
tests/api/: test_handler.py  test_security.py
tests/bedrock_agent/: test_handler.py
tests/eventbridge/: test_handler.py  test_properties.py
tests/graphql/: test_handler.py  test_models.py  test_settings.py
tests/s3/: conftest.py  test_handler.py  test_models.py  test_settings.py
tests/sqs/: conftest.py  test_handler.py  test_models.py  test_settings.py
tests/stream/: test_handler.py
(+22 files in other folders)
