[project]
name = "templates"
version = "0.1.0"
description = "AWS Lambda Templates"
authors = [{name = "Amr Abed", email = ""}]
license = {text = "MIT"}
readme = "docs/README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "aws-lambda-powertools>=3.29.0",
    "boto3>=1.43.8",
    "requests>=2.34.2",
]

[project.scripts]
new = "scripts.new:main"
rename = "scripts.rename:main"

[dependency-groups]
infra = [
    "aws-cdk-lib>=2.254.0",
    "constructs>=10.6.0",
]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.15.13",
    "coverage>=7.14.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.391",
    "pytest-mock>=3.15.1",
    "moto>=5.2.1",
    "hypothesis>=6.152.7",
    "click>=8.3.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-material>=9.6.20",
]

[tool.uv]
default-groups = ["infra", "dev", "docs"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "I"]

[tool.coverage.run]
branch = true
source = ["templates"]

[tool.coverage.report]
omit = ["tests/*"]
fail_under = 90

[tool.pyright]
exclude = ["**/__pycache__", "**/.pytest_cache", ".venv"]
reportMissingImports = "error"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
