[project]
name = "templates"
version = "0.1.0"
description = "AWS Lambda Templates"
authors = [{name = "Amr Abed", email = ""}]
license = {text = "MIT"}
readme = "docs/README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "aws-lambda-powertools>=3.31.1",
    "boto3>=1.43.50",
    "requests>=2.34.2",
]

[project.scripts]
new = "scripts.new:main"
rename = "scripts.rename:main"

[dependency-groups]
infra = [
    "aws-cdk-lib>=2.261.0",
    "constructs>=10.7.0",
]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "coverage>=7.15.2",
    "pre-commit>=4.0.1",
    "pyright>=1.1.411",
    "pytest-mock>=3.15.1",
    "moto>=5.2.1",
    "hypothesis>=6.156.6",
    "click>=8.4.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.6",
    "mkdocs-material>=9.6.20",
]

[tool.uv]
default-groups = ["infra", "dev", "docs"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "I"]

[tool.coverage.run]
branch = true
source = ["templates"]

[tool.coverage.report]
omit = ["tests/*"]
fail_under = 90

[tool.pyright]
exclude = ["**/__pycache__", "**/.pytest_cache", ".venv"]
reportMissingImports = "error"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
